# npycvx

./: README.md  pyproject.toml  requirements.txt  setup.cfg  test.py
npycvx/: __init__.py
tests/: test_npycvx.py
