[metadata]
name = npycvx
version = 0.0.2
author = ourstudio
author_email = rikard@ourstudio.se
description = Converter from numpy to cvxopt.
keywords = cvxopt, glpk, solver, ilp, integer linear programming

[options]
packages = find:
where = npycvx

install_requires =
  numpy>=1.19.5
  cvxopt>=1.2.5